--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -46,4 +46,7 @@
     <dimen name="padding_large_24">24dp</dimen>
     <dimen name="padding_big_32">32dp</dimen>
 
+    <dimen name="custom_tab_layout_height">72dp</dimen>
+    <dimen name="custom_tab_icon_size">36dp</dimen>
+
 </resources>
