--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,17 @@
     <color name="grey_light">#DBDBDB</color>
     <color name="grey">#939393</color>
     <color name="grey_dark">#5F5F5F</color>
+
+    <color name="orange">#FF9800</color>
+    <color name="pink">#E91E63</color>
+    <color name="cyan">#00BCD4</color>
+    <color name="lime">#CDDC39</color>
+    <color name="gray">#9E9E9E</color>
+    <color name="deep_orange">#FF5722</color>
+    <color name="teal">#009688</color>
+    <color name="amber">#FFC107</color>
+    <color name="indigo">#3F51B5</color>
+    <color name="purple">#E040FB</color>
+    <color name="brown">#795548</color>
+    <color name="light_green">#8BC34A</color>
 </resources>
