--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,12 +4,14 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
 
     <!-- font sizes -->
-    <dimen name="font_little_8">8sp</dimen>
     <dimen name="font_small_12">12sp</dimen>
     <dimen name="font_normal_14">14sp</dimen>
     <dimen name="font_increased_16">16sp</dimen>
     <dimen name="font_large_20">20sp</dimen>
     <dimen name="font_enlarge_24">24sp</dimen>
+    <dimen name="font_34">34sp</dimen>
+    <dimen name="font_56">56sp</dimen>
+    <dimen name="font_112">112sp</dimen>
 
     <!--Spaces-->
     <dimen name="spacing_zero_0">0dp</dimen>
@@ -47,6 +49,9 @@
     <dimen name="padding_big_32">32dp</dimen>
 
     <dimen name="custom_tab_layout_height">72dp</dimen>
-    <dimen name="custom_tab_icon_size">36dp</dimen>
+    <dimen name="rv_items_heigth">72dp</dimen>
+
+    <dimen name="size_custom_tab_icon">36dp</dimen>
+    <dimen name="size_rv_avatar">40dp</dimen>
 
 </resources>
