--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -48,10 +48,11 @@
     <dimen name="padding_large_24">24dp</dimen>
     <dimen name="padding_big_32">32dp</dimen>
 
-    <dimen name="custom_tab_layout_height">72dp</dimen>
+    <dimen name="custom_tab_layout_height">80dp</dimen>
     <dimen name="rv_items_heigth">72dp</dimen>
+    <dimen name="nav_drawer_height">172dp</dimen>
 
-    <dimen name="size_custom_tab_icon">36dp</dimen>
+    <dimen name="size_custom_tab_icon">40dp</dimen>
     <dimen name="size_rv_avatar">40dp</dimen>
 
 </resources>
