--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="color_primary">#795548</color>
-    <color name="color_primary_dark">#5D4037</color>
-    <color name="color_accent">#FF5252</color>
+    <color name="color_primary">#85041A</color>
+    <color name="color_primary_dark">#510110</color>
+    <color name="color_accent">#9E9E9E</color>
 
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
@@ -14,7 +14,7 @@
     <color name="pink">#E91E63</color>
     <color name="cyan">#00BCD4</color>
     <color name="lime">#CDDC39</color>
-    <color name="gray">#9E9E9E</color>
+    <color name="gray">#FF5252</color>
     <color name="deep_orange">#FF5722</color>
     <color name="teal">#009688</color>
     <color name="amber">#FFC107</color>
