--- a/app/src/main/res/layout/activity_person_info.xml
+++ b/app/src/main/res/layout/activity_person_info.xml
@@ -5,122 +5,53 @@
     android:id="@+id/person_activity_coordinator"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     tools:context=".ui.activities.PersonInfoActivity">
 
-    <LinearLayout
+    <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:background="@color/color_primary"
+        android:fitsSystemWindows="true"
+        android:theme="@style/AppTheme.AppBarOverlay">
 
-        <LinearLayout style="@style/person_layout_item_overal">
-
-            <ImageView
-                android:id="@+id/person_activity_icon_words"
-                style="@style/person_icons"
-                tools:src="@color/pink" />
-
-            <LinearLayout
-                style="@style/person_layout_item"
-                android:layout_width="0dp"
-                android:layout_height="72dp">
-
-                <android.support.design.widget.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <EditText
-                        android:id="@+id/person_activity_et_words"
-                        style="@style/person_edit_text"
-                        android:hint="@string/person_hint_words"
-                        tools:text="Test" />
-                </android.support.design.widget.TextInputLayout>
-            </LinearLayout>
-        </LinearLayout>
-
-        <View style="@style/person_divider" />
-
-        <LinearLayout style="@style/person_layout_item_overal">
+        <android.support.design.widget.CollapsingToolbarLayout
+            android:id="@+id/person_activity_collapsing_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:contentScrim="@color/color_primary"
+            android:fitsSystemWindows="true"
+            app:expandedTitleGravity="bottom|center_horizontal"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
             <ImageView
-                android:id="@+id/person_activity_icon_born"
-                style="@style/person_icons"
-                tools:src="@color/pink" />
+                android:id="@+id/person_activity_house_image"
+                android:layout_width="match_parent"
+                android:layout_height="512dp"
+                android:scaleType="fitXY"
+                android:src="@drawable/person_stark"
+                android:fitsSystemWindows="true"/>
 
-            <LinearLayout
-                style="@style/person_layout_item"
-                android:layout_width="0dp"
-                android:layout_height="72dp">
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/person_activity_toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:theme="@style/AppTheme.PopupOverlay"
+                app:layout_collapseMode="pin"
+                app:titleTextColor="@color/white" />
 
-                <android.support.design.widget.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+        </android.support.design.widget.CollapsingToolbarLayout>
+    </android.support.design.widget.AppBarLayout>
 
-                    <EditText
-                        android:id="@+id/person_activity_et_born"
-                        style="@style/person_edit_text"
-                        android:hint="@string/person_hint_born"
-                        tools:text="Test" />
-                </android.support.design.widget.TextInputLayout>
-            </LinearLayout>
-        </LinearLayout>
 
-        <View style="@style/person_divider" />
+    <android.support.v4.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <LinearLayout style="@style/person_layout_item_overal">
+        <include layout="@layout/person_activity_scroll_elements" />
 
-            <ImageView
-                android:id="@+id/person_activity_icon_titles"
-                style="@style/person_icons"
-                tools:src="@color/pink" />
-
-            <LinearLayout
-                style="@style/person_layout_item"
-                android:layout_width="0dp"
-                android:layout_height="72dp">
-
-                <android.support.design.widget.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <EditText
-                        android:id="@+id/person_activity_et_titles"
-                        style="@style/person_edit_text"
-                        android:hint="@string/person_hint_titles"
-                        tools:text="Test" />
-                </android.support.design.widget.TextInputLayout>
-            </LinearLayout>
-        </LinearLayout>
-
-        <View style="@style/person_divider" />
-
-        <LinearLayout style="@style/person_layout_item_overal">
-
-            <ImageView
-                android:id="@+id/person_activity_icon_aliases"
-                style="@style/person_icons"
-                tools:src="@color/pink" />
-
-            <LinearLayout
-                style="@style/person_layout_item"
-                android:layout_width="0dp"
-                android:layout_height="72dp">
-
-                <android.support.design.widget.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <EditText
-                        android:id="@+id/person_activity_et_aliases"
-                        style="@style/person_edit_text"
-                        android:hint="@string/person_hint_aliases"
-                        tools:text="Test" />
-                </android.support.design.widget.TextInputLayout>
-            </LinearLayout>
-        </LinearLayout>
-
-        <View style="@style/person_divider" />
-
-    </LinearLayout>
+    </android.support.v4.widget.NestedScrollView>
 
     <TextView
         android:id="@+id/person_activity_no_person_info_tv"
@@ -134,6 +65,5 @@
         android:visibility="gone">
 
     </TextView>
-
 
 </android.support.design.widget.CoordinatorLayout>
