--- a/app/src/main/res/layout/activity_person_info.xml
+++ b/app/src/main/res/layout/activity_person_info.xml
@@ -45,8 +45,10 @@
 
 
     <android.support.v4.widget.NestedScrollView
+        android:id="@+id/person_activity_scroll"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:fillViewport="true"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <include layout="@layout/person_activity_scroll_elements" />
