Кладу в БД данные кучей, чтоб ощутить всю мощь GreenDao Говнокод тот еще конечно - надо как нить переделать

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,6 +20,10 @@
         <item name="android:textColor">@color/white</item>
     </style>
 
+    <style name="progress_style">
+        <item name="colorAccent">@color/color_primary</item>
+    </style>
+
     <style name="custom_dialog">
         <item name="android:fullDark">@android:color/transparent</item>
     </style>
