--- a/app/src/main/res/drawable/splash_layer.xml
+++ b/app/src/main/res/drawable/splash_layer.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item
-        android:drawable="@color/grey"/>
+    <item android:drawable="@color/grey" />
 
     <item>
         <bitmap
             android:gravity="fill"
-            android:src="@drawable/splash"/>
+            android:src="@drawable/splash" />
     </item>
 
 </layer-list>
