--- a/app/src/main/res/layout/progress_splash.xml
+++ b/app/src/main/res/layout/progress_splash.xml
@@ -8,9 +8,10 @@
 
     <ProgressBar
         android:id="@+id/progress"
+        style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        style="@style/progress_style"
-        android:indeterminate="true"/>
+        android:indeterminate="true"
+        android:theme="@style/progress_style" />
 
 </LinearLayout>
