--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -27,7 +27,16 @@
     </style>
 
     <style name="progress_style">
-        <item name="colorAccent">@color/color_primary</item>
+        <item name="colorAccent">@color/color_accent_progress</item>
+    </style>
+
+    <style name="progress_theme" parent="android:Theme">
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:backgroundDimEnabled">false</item>
     </style>
 
     <style name="custom_dialog">
